@@ -85,6 +85,7 @@ bool showquadformultipleinputs = false;            // Switch to quad view for mu
 bool cascadedswitches = false;                     // Using 2 switches?
 bool showoutputongpio = false;                     // Toggle gpio lines in addition to IR
 int outputaudioi2cbit[8];                          // range 0 - 7, value 0 to 7
+int daisychainirselectgpio = 27;                   // Second IR select Broadcom number
 
 // Current Status parameters
 int inputactive[8] = {1, 0, 0, 0, 0, 0, 0, 0};     // 0 if inactive, 1 if active
